# Snake

./: CMakeLists.txt  Makefile  README.md  doxygen_config
docs/: Doxyfile.in  MAINPAGE.md
include/: Food.h  Game.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp  Snake.h  main.cpp
